Fix Safari z-index issue

--- a/resources/styles/visualizer.scss
+++ b/resources/styles/visualizer.scss
@@ -1,9 +1,9 @@
 @import 'constants';
 
 .liquid-container{
-
-  position: relative;
   display: inline-block;
+  position: relative;
+  transform: translate3d(0, 0, 0); //fix z-index issue on Safari
 
   img{
     position: relative;
